--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="intro">
           <h1>Hello — I’m <span id="name">Sathvik Sankaranarayanan</span></h1>
-          <p class="tagline">A short tagline about what you do. Example: Front-end developer • Designer • Problem-solver</p>
+          <p class="tagline">Exploring AI, embedded systems, and graph intelligence to shape future technologies.</p>
           <p class="cta-row">
             <a class="btn" href="#contact">Get in touch</a>
             <a class="btn ghost" href="resume.pdf" download>Download Resume</a>
