--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <section id="about" class="card">
       <h2>About</h2>
-      <p id="about-text">I am an Electronic Systems Engineering & Technology student at Texas A&amp;M University (projected May 2027) with hands-on experience in application development, data migration, and research in cyber-physical systems. I build backend services and ETL pipelines using C#, Node.js, Python, and TypeScript, and I work with graph learning, topic modeling, and custom LLMs for research applications. Currently interning as an App Developer and working as a research assistant at the iStar Laboratory.</p>
+      <p id="about-text">Howdy! My name is Sathvik and I am an Electronic Systems Engineering & Technology student at Texas A&M University (projected May 2027) with hands-on experience in application development, data migration, and research in cyber-physical systems. I build backend services and ETL pipelines using C#, Node.js, Python, and TypeScript, and I work with graph learning, topic modeling, and custom LLMs for research applications. Currently working as a research assistant at the iStar Laboratory.</p>
     </section>
 
     <section id="education" class="card">
